add link to github

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<footer>
 		<div class="wrapper">
 			<span>Built by <a href="http://www.twitter.com/pehaa">@PeHaa.</a>
-				<!--  <a href="https://github.cpm/pehaa/elephphant">Fork it (or report an issue) on Github</a>-->
+				<a href="https://github.com/pehaa/elephphant">Fork it (or report an issue) on Github</a>
 			</span>
 			<button id="elephphant-reset" class="reset-progress">Reset</button>
 		</div>
